docs/v0.12.0/_sources/tutorial/install.rst.txt

.. DO NOT EDIT. THIS FILE WAS AUTOMATICALLY GENERATED BY
.. TVM'S MONKEY-PATCHED VERSION OF SPHINX-GALLERY. TO MAKE
.. CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorial/install.py"

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        This tutorial can be used interactively with Google Colab! You can also click
        :ref:`here <sphx_glr_download_tutorial_install.py>` to run the Jupyter notebook locally.

        .. image:: https://raw.githubusercontent.com/tlc-pack/web-data/main/images/utilities/colab_button.svg
            :align: center
            :target: https://colab.research.google.com/github/apache/tvm-site/blob/asf-site/docs/_downloads/0.12.0/2a4c6a9cfa43e8afef159a2bf1b99108/install.ipynb
            :width: 300px

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorial_install.py:


Installing TVM
==============
**Authors**:
`Jocelyn Shiue <https://github.com/>`_,
`Chris Hoge <https://github.com/hogepodge>`_

Depending on your needs and your working environment, there are a few different
methods for installing TVM. These include:

* Installing from source
* Installing from third-party binary package.

.. GENERATED FROM PYTHON SOURCE LINES 32-40

Installing From Source
----------------------
Installing from source is the recommended method for installing TVM. It will
allow you to enable specific features such as GPU support, microcontroller
support (microTVM), and a debugging runtime, and other features. You will also
want to install from source if you want to actively contribute to the TVM
project. The full instructions are on the :ref:`Install TVM From Source
<install-from-source>` page.

.. GENERATED FROM PYTHON SOURCE LINES 42-51

Installing From Binary Packages
--------------------------------
You may install convenient third party binary package distributions to
quickly try things out. TLCPack is a third party volunteer community that
builds binary packages from TVM source. It offers a support matrix with
instructions to install on different platforms, with different features.
Check out  `TLCPack <https://tlcpack.ai>`_ to learn more. Note that the
third party binary packages could contain additional licensing terms for
the hardware drivers that are bundled with it.


.. _sphx_glr_download_tutorial_install.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: install.py <install.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: install.ipynb <install.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
